# Chapter13

./: .gitmodules  Dockerfile  Dockerfile.Ubuntu20.04  Dockerfile.vnc  License.txt  Makefile  README.autovirtualbox  README.docker  README.md  README.virtualbox  Setup.Ubuntu20.04  autovirtualbox.sh  dockerbash.sh  dockerit.sh  dockertest.sh  dockervnc.sh
Kokkos/ShallowWater/: CMakeLists.txt  ShallowWater.cc  ShallowWater_par1.cc  ShallowWater_par2.cc  ShallowWater_par3.cc  ShallowWater_par4.cc  ShallowWater_par5.cc  ShallowWater_ver3.cc  build_cuda_version.sh  build_hip_version.sh  build_openmp_version.sh  build_serial_version.sh  kokkos_cmake_options.txt  memory.h  timer.h
Kokkos/ShallowWater/graphics/: CMakeLists.txt  README.md
Kokkos/StreamTriad/Orig/: CMakeLists.txt  StreamTriad.cc
Kokkos/StreamTriad/Ver1/: CMakeLists.txt  StreamTriad.cc  timer.h
Kokkos/StreamTriad/Ver2/: StreamTriad.cc
Kokkos/StreamTriad/Ver3/: StreamTriad.cc
Kokkos/StreamTriad/Ver4/: StreamTriad.cc
OpenACC/ShallowWater/: CMakeLists.txt  README.graphics  ShallowWater.c  ShallowWater_par1.c  ShallowWater_par2.c  ShallowWater_par3.c  ShallowWater_par4.c  nvprof_data_capture.sh
OpenACC/ShallowWater/graphics/: CMakeLists.txt  display.c  display.h  fdisplay.F90  fgraphics.F90  graphics.c
OpenACC/ShallowWater/prof/: ShallowWater.out  ShallowWater_par1_timeline.out  ShallowWater_par2_timeline.out  ShallowWater_par2_timeline.prof  ShallowWater_par3_timeline.out  ShallowWater_par3_timeline.prof  ShallowWater_par4_timeline.out  ShallowWater_par4_timeline.prof
OpenACC/ShallowWater_profiled/: CMakeLists.txt  ShallowWater.c  ShallowWater_par2.c  ShallowWater_par4.c  nvprof_data_capture.sh  timer.h
OpenACC/ShallowWater_profiled/graphics/: display.c  graphics.c  graphics.h
